[project]
name = "openvla-dd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "accelerate==1.10.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "black>=25.1.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "draccus==0.11.5",
    "fanucpy>=0.1.4",
    "fastapi==0.116.1",
    "filelock==3.19.1",
    "fsspec==2025.7.0",
    "h11==0.16.0",
    "hf-xet==1.1.7",
    "huggingface-hub==0.34.4",
    "idna==3.10",
    "jinja2==3.1.6",
    "json-numpy==2.1.1",
    "markupsafe==3.0.2",
    "mergedeep==1.3.4",
    "mpmath==1.3.0",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "opencv-python>=4.11.0.86",
    "packaging==25.0",
    "pillow==11.3.0",
    "psutil==7.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyyaml==6.0.2",
    "pyyaml-include==1.4.1",
    "regex==2025.7.34",
    "requests==2.32.4",
    "safetensors==0.6.2",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "timm==0.9.16",
    "toml==0.10.2",
    "torch>=2.7.1",
    "torchaudio",
    "torchvision",
    "tqdm==4.67.1",
    "transformers==4.53.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "numpy==2.3.2",
    "ninja; platform_machine=='x86_64' and sys_platform=='linux'",
    # "flash-attn; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-cublas-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-cuda-cupti-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-cuda-nvrtc-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-cuda-runtime-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-cudnn-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-cufft-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-curand-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-cusolver-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-cusparse-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-nccl-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-nvjitlink-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
    "nvidia-nvtx-cu12; platform_machine=='x86_64' and sys_platform=='linux'",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-cov"
]
